Fixed hover color issue on mobile

--- a/tools/abc2csv.css
+++ b/tools/abc2csv.css
@@ -157,12 +157,6 @@ background-color: #eee;
 }
 
 
-@media not all and (pointer: coarse) {
-.accordion:hover {
-background-color: #9f9;
-}
-}
-
 .expandall{
 font-size:11pt  !important;
 font-family:"Helvetica" !important;
@@ -175,10 +169,10 @@ color:black !important;
 background-color: #eee;
 }
 
-@media not all and (pointer: coarse) {
-.expandall:hover {
-background-color: #9f9;
-}
+/* Show hover highlight only on devices that actually support hover + fine pointer */
+@media (hover: hover) and (pointer: fine) {
+  .accordion:hover { background-color: #9f9; }
+  .expandall:hover { background-color: #9f9; }
 }
 
 .tocpanel {
